--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none'><rect x='4' y='6' width='16' height='12' rx='2' fill='%23000'/><rect x='6' y='8' width='4' height='4' rx='1' fill='white'/><rect x='14' y='8' width='4' height='4' rx='1' fill='white'/><circle cx='8' cy='10' r='0.5' fill='%23000'/><circle cx='16' cy='10' r='0.5' fill='%23000'/><rect x='10' y='14' width='4' height='2' rx='1' fill='white'/><path d='M8 4l2-2h4l2 2' stroke='%23000' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/><path d='M6 6h12' stroke='%23000' stroke-width='1.5' stroke-linecap='round'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ronaldding Tools</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <title>Ronald Ding's App</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/react-app/main.tsx"></script>
